--- a/recipes/Indian-lemon-fried-rice.html
+++ b/recipes/Indian-lemon-fried-rice.html
@@ -39,9 +39,9 @@
         <li>1 teaspoon Turmeric</li>
         <li>1/4 teaspoon Cayenne Pepper or to taste (OPTIONAL)</li>
         <li>2 to 3 Tablespoon Lemon juice </li>
-        <li>3/4 cup / 30g Cilantro leaves/li>
-        <li>2 teaspoon Sesame oil/li>
-        <li>1/3 cup / 50g Roasted peanuts/li>
+        <li>3/4 cup / 30g Cilantro leaves</li>
+        <li>2 teaspoon Sesame oil/<li>
+        <li>1/3 cup / 50g Roasted peanuts</li>
     </ul>
 
     <h3>Steps</h3>
